@@ -38,6 +38,9 @@
 <p>2020-01-03  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/timer.c (StartTimer): Expose previously existing
+StartTimer() function.
+(StopTimer): Expose previously existing StartTimer() function.</li>
 <li>magick/constitute.c (WriteImage): Don't over-write time-stamp
 when output is to INFO format.</li>
 </ul>
